fix: restore interrupt status on InterruptedException; use Java 8-compatible URLEncoder overload
- Split multi-catch in generateClientToken: InterruptedException now calls
  Thread.currentThread().interrupt() before wrapping in APIException
- Replace URLEncoder.encode(String, Charset) (Java 10+) with
  URLEncoder.encode(String, String) using StandardCharsets.UTF_8.name()
  to match the Java 8-compatible overload used elsewhere in this class